--- a/css/styles.css
+++ b/css/styles.css
@@ -15,7 +15,12 @@ h1{
   font-size: 3.5rem;
   line-height: 1.5;
 }
-
+h2{
+  font-family: "Montserrat-Bold";
+  font-size: 3rem;
+  line-height: 1.5;
+  font-weight: 700;
+}
 h3{
   font-family: "Montserrat";
   font-weight: 700;
@@ -74,4 +79,45 @@ p{
 
 .icon:hover{
   color: #ff4c68
+}
+
+
+/* Testimonial Sections */
+#testimonials{
+
+  text-align: center;
+  background-color: #EF8172;
+  color: #FFF;
+
+}
+.testimonial-image{
+  width: 10%;
+  border-radius: 100%;
+  margin: 20px;
+}
+
+.carousel-item{
+  padding: 7% 15%;
+}
+
+#press{
+  background-color: #EF8172;
+  text-align: center;
+  padding-bottom: 3%;
+}
+.press-logo{
+  width: 15%;
+  margin: 20px 20px 50px;
+}
+
+/* pricing */
+
+
+#pricing{
+  padding: 100px;
+  text-align: center;
+}
+
+.pricing-column{
+  padding: 3% 2%;
 }
